--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,16 @@ certifi==2023.5.7
 charset-normalizer==3.1.0
 discord==2.2.3
 discord.py==2.2.3
+freetype-py==2.3.0
 frozenlist==1.3.3
 idna==3.4
 javascriptpy==1.1.6
 multidict==6.0.4
+Pillow==9.5.0
+pycairo==1.23.0
 python-decouple==3.8
+reportlab==4.0.0
 requests==2.31.0
+rlPyCairo==0.2.0
 urllib3==2.0.2
 yarl==1.9.2
